# TheLoyalGame-Chatbot

./: .env  Cargo.toml  README.md  dump.rdb
src/: handlers.rs  lib.rs  main.rs
wasm/: wasm.js
web/: botstyle.css  getString.js  index.html  main.js
