[package]
name = "chatbot-rust-wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "chatbot_rust_wasm"
path = "src/lib.rs"

[[bin]]
name = "theloyalgame-server"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-multipart = "0.4"  # Add actix-multipart for handling multipart form data
redis = { version = "0.27.2", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1"
uuid = { version = "1.10", features = ["v4"] }
base64 = "0.13"  # Add base64 for encoding the photo
futures-util = "0.3"  # Required for actix-multipart
